--- a/C# web/C# WebBasicExam - SharedTrip/SharedTrip/Views/Trips/Details.cshtml
+++ b/C# web/C# WebBasicExam - SharedTrip/SharedTrip/Views/Trips/Details.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="form-group">
                 <label for="departureTime">Departure Time</label>
-                <input type="datetime-local" readonly class="form-control" id="departureTime" value="@Model.DepartureTime">
+                <input type="datetime-local" readonly class="form-control" id="departureTime" value="@Model.DepartureTimeAsString">
             </div>
             <div class="form-group">
                 <label for="seats">Seats</label>
